<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#21AC85">

    <!--hola esto es un comentario -->

    <TextView
        android:id="@+id/tvSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="top|center"

/>

    <Button
        android:id="@+id/buttonSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="Siguiente"
        android:textColor="#000000"
        android:backgroundTint="#DA1607"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etNombre"
        tools:ignore="InvalidId"
        android:layout_gravity="top|center"
        android:hint="Inserta aqui tu nombre"/>

</LinearLayout>